[project]
name = "gridstatusio"
version = "0.10.0"
description = "Python Client for GridStatus.io API"
authors = [{ name = "Max Kanter", email = "kmax12@gmail.com" }]
requires-python = ">=3.9, <4"
readme = "README.md"
license.file = "LICENSE"
maintainers = [{ name = "Max Kanter", email = "kmax12@gmail.com" }]
keywords = [
    "energy",
    "independent system operator",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.32.2,<3",
    "numpy>=1.26.4,<2",
    "pandas>1.3.0",
    "tqdm>=4.66.3,<5",
    "termcolor==1.1.0",
    "tabulate>=0.9.0,<0.10",
    "urllib3>=2.2.2,<3",
    "setuptools>=70.0.0,<71",
    "idna~=3.7",
    "certifi>=2024.7.4,<2025",
    "virtualenv>=20.26.6,<21",
]

[project.urls]
"Source Code" = "https://github.com/kmax12/gridstatusio/"
"Issue Tracker" = "https://github.com/kmax12/gridstatusio/issues"

[tool.uv]
dev-dependencies = [
    "pytest==7.1.2",
    "pytest-xdist==3.0.2",
    "pytest-rerunfailures==10.3",
    "pre-commit==2.21.0",
    "plotly>=5.11.0,<6",
    "kaleido==0.2.1",
    "nbformat==5.1.3",
    "ruff>=0.5.0,<0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["gridstatusio/tests/*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 88
lint.ignore = []
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # flake8-quotes
    "Q",
    # isort
    "I001"
]
src = ["gridstatusio"]

[tool.ruff.lint.isort]
known-first-party = ["gridstatusio"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403", "F405", "E501", "I001"]
